# bazel-stack-vscode

./: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: ci.yaml  release.yaml
docs/: 0_index.md  _config.yml  debugging.md  docusaurus.config.js  exploring.md  formatting.md  installing.md  jumping.md  launching.md  linting.md  package.json  remoting.md  searching.md  sidebars.js  subscribing.md  syntax.md  versions.json
docs/navigating/: commands.md  events.md  navigating.md  repositories.md  targets.md  workspaces.md
docs/static/: CNAME
flaginfo/: bazel.flaginfo
help/: packages.md  repositories.md  workspaces.md
moduleinfo/: starlark.moduleinfo
proto/: auth.proto  build_event_stream.proto  build_events.proto  build_status.proto  bzl.proto  codesearch.proto  command_line.proto  failure_details.proto  invocation_policy.proto  license.proto  livegrep.proto  nucleate.proto  operations.proto  option_filters.proto  publish_build_event.proto  remote_execution.proto  starlark_debugging.proto
resources/css/: code.css
snippets/: bazel.json
src/: api.ts  bazelDocGroupHover.ts  common.ts  configuration.ts  constants.ts  container.ts  download.ts  extension.ts  logger.ts  multiStepInput.ts  reconfigurable.ts  starlarkDocGroupHover.ts
src/bezel/: bes.ts  (+31 more)
src/test/fixtures/feature.bazeldoc/: BUILD.bazel
syntaxes/: bazel.tmLanguage.json  bazel.tmLanguage.license  bazelrc.configuration.json  bazelrc.tmLanguage.json
tools/: viewsWelcomeGenerator.js
(+346 files in other folders)
